# projetoFM

./: .gitignore  QUICK_START.md  README.md  TOKENIZERS.md  USAGE_GUIDE.md  autoencoder_model.pth  benchmark_transformer.py  check_sequence_lengths.py  check_training_loss.py  config.yaml  create_cubes.py  datasets.ipynb  debug_inference.py  desi.ipynb  desi_tiles.csv  dev.ipynb  fields.csv  loading_transformers.ipynb  mask.ipynb  new_train.py  pyproject.toml  tbak.py  train_aion_masked.py  train_aion_masked_h100.py  train_foundation.py  transformers.py
astromodal/: config.py
astromodal/datasets/: datacubes.py  desi_spectra.py  gaiaxp.py  spluscuts.py
astromodal/datatypes/: __init__.py  base.py  desispec.py  gaiaxp.py  scalar.py  spluscuts.py
codecs/: check_image.ipynb  codebook_kmeans_2048.joblib.float64.joblib  image.ipynb  image.py  image_qinco.py  image_resnet.py  run_codebook.py  run_image_inference.py  train_image.py
docs/: training_infrastructure.md
examples/: inference_comprehensive.py  inference_from_raw.py  test_conditional_generation.py  test_model_learning.py  train_with_meaningful_loss.py
image_tokenizers/: benchmark.py  benchmark_results.json  codebook_kmeans_2048.joblib  image.ipynb
scalar_tokenizers/: benchmark.py  encode_scalar_tokenizer.py  scalar_tokenizer_benchmark.json  scalar_tokenizer_config.npz  train_scalar_tokenizer.py
spectrum_tokenizers/: benchmark.py  encode_spectrum_tokens.py  spectrum_codebook_benchmark.json  spectrum_tokenizer_config.npz  train_spectrum_tokenizers.py  working.py
vista/: download.py
(+76 files in other folders)
